force-app/main/default/objects/Empresa_contratante__c/Empresa_contratante__c.object-meta.xml
<CustomObject>
    <label>Empresa contratante</label>
    <nameField>
        <label>Nome de Empresa contratante</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Empresas contratante</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>