force-app/main/default/objects/Empresa_contratante__c/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <description>CNPJ empresa contratante</description>
    <inlineHelpText>Informe o CNPJ empresa contratante</inlineHelpText>
    <label>CNPJ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>