force-app/main/default/objects/Empresa_contratante__c/fields/Endereco__c.field-meta.xml
<CustomField>
    <fullName>Endereco__c</fullName>
    <description>Endereço empresa contratante</description>
    <inlineHelpText>Informe o endereço da empresa contratante</inlineHelpText>
    <label>Endereco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>