force-app/main/default/objects/Empresa_contratante__c/fields/Telefone_empresa_Contratante__c.field-meta.xml
<CustomField>
    <fullName>Telefone_empresa_Contratante__c</fullName>
    <description>Telefone empresa Contratante</description>
    <inlineHelpText>Informe o Telefone da empresa Contratante</inlineHelpText>
    <label>Telefone empresa Contratante</label>
    <type>Phone</type>
</CustomField>